--- a/app/index.jinja2
+++ b/app/index.jinja2
@@ -1,1 +1,10 @@
-<a href="{{ url_for('home_bp.home') }}">Home</a>
+{% extends "layout.jinja2" %}
+
+<link
+   href="{{ url_for('static', filename='dist/css/style.min.css') }}"
+   rel="stylesheet"
+   type="text/css"
+/>
+<script
+   src="{{ url_for('static', filename='dist/js/main.min.js') }}">
+</script>
